c-minus/parser/parser.output
Terminals unused in grammar

    MOD_OP
    DOT
    INVALID_IDENTIFIER
    LEXICAL_ERROR
    ERROR_RECOVERY


Grammar

    0 $accept: programa $end

    1 programa: declaracao_lista

    2 declaracao_lista: declaracao
    3                 | declaracao_lista declaracao

    4 declaracao: var_declaracao
    5           | fun_declaracao

    6 var_declaracao: tipo_especificador IDENTIFIER SEMICOLON
    7               | tipo_especificador IDENTIFIER OPEN_BRACKET INT_NUMBER CLOSE_BRACKET arranjo_dimensao SEMICOLON
    8               | tipo_especificador IDENTIFIER error SEMICOLON
    9               | tipo_especificador IDENTIFIER OPEN_BRACKET INT_NUMBER error SEMICOLON
   10               | tipo_especificador IDENTIFIER OPEN_BRACKET error CLOSE_BRACKET SEMICOLON

   11 arranjo_dimensao: ε
   12                 | arranjo_dimensao OPEN_BRACKET INT_NUMBER CLOSE_BRACKET
   13                 | arranjo_dimensao OPEN_BRACKET INT_NUMBER error
   14                 | arranjo_dimensao OPEN_BRACKET error CLOSE_BRACKET

   15 tipo_especificador: INT_TYPE
   16                   | FLOAT_TYPE
   17                   | CHAR_TYPE
   18                   | VOID_TYPE
   19                   | STRUCT_TYPE IDENTIFIER OPEN_BRACE atributos_declaracao CLOSE_BRACE
   20                   | STRUCT_TYPE IDENTIFIER OPEN_BRACE atributos_declaracao error
   21                   | STRUCT_TYPE IDENTIFIER OPEN_BRACE error CLOSE_BRACE

   22 atributos_declaracao: var_declaracao
   23                     | atributos_declaracao var_declaracao

   24 fun_declaracao: tipo_especificador IDENTIFIER OPEN_PAREN params CLOSE_PAREN composto_decl
   25               | tipo_especificador IDENTIFIER OPEN_PAREN params error composto_decl
   26               | tipo_especificador IDENTIFIER OPEN_PAREN error CLOSE_PAREN composto_decl

   27 params: param_lista
   28       | VOID_TYPE

   29 param_lista: param
   30            | param_lista COMMA param

   31 param: tipo_especificador IDENTIFIER
   32      | tipo_especificador IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
   33      | tipo_especificador IDENTIFIER OPEN_BRACKET error

   34 composto_decl: OPEN_BRACE local_declaracoes comando_lista temp

   35 temp: CLOSE_BRACE
   36     | error

   37 local_declaracoes: ε
   38                  | local_declaracoes var_declaracao

   39 comando_lista: ε
   40              | comando_lista comando

   41 comando: expressao_decl
   42        | composto_decl
   43        | selecao_decl
   44        | iteracao_decl
   45        | retorno_decl

   46 expressao_decl: expressao SEMICOLON
   47               | SEMICOLON
   48               | expressao error

   49 selecao_decl: IF_KEYWORD OPEN_PAREN expressao CLOSE_PAREN comando
   50             | IF_KEYWORD OPEN_PAREN expressao CLOSE_PAREN comando ELSE_KEYWORD comando
   51             | IF_KEYWORD OPEN_PAREN expressao error comando
   52             | IF_KEYWORD OPEN_PAREN error CLOSE_PAREN comando
   53             | IF_KEYWORD error

   54 iteracao_decl: WHILE_KEYWORD OPEN_PAREN expressao CLOSE_PAREN comando
   55              | WHILE_KEYWORD OPEN_PAREN expressao error comando
   56              | WHILE_KEYWORD OPEN_PAREN error CLOSE_PAREN comando
   57              | WHILE_KEYWORD error

   58 retorno_decl: RETURN_KEYWORD SEMICOLON
   59             | RETURN_KEYWORD expressao SEMICOLON
   60             | RETURN_KEYWORD expressao error

   61 expressao: var ASSIGN_OP expressao
   62          | expressao_simples

   63 var: IDENTIFIER
   64    | IDENTIFIER OPEN_BRACKET expressao CLOSE_BRACKET arranjo_acesso
   65    | IDENTIFIER OPEN_BRACKET expressao error arranjo_acesso
   66    | IDENTIFIER OPEN_BRACKET error CLOSE_BRACKET arranjo_acesso

   67 arranjo_acesso: ε
   68               | arranjo_acesso OPEN_BRACKET expressao CLOSE_BRACKET
   69               | arranjo_acesso OPEN_BRACKET expressao error
   70               | arranjo_acesso OPEN_BRACKET error CLOSE_BRACKET

   71 expressao_simples: expressao_soma
   72                  | expressao_soma relacional expressao_soma

   73 relacional: LE_OP
   74           | LT_OP
   75           | GT_OP
   76           | GE_OP
   77           | EQUAL_OP
   78           | NE_OP

   79 expressao_soma: termo
   80               | expressao_soma soma_op termo

   81 soma_op: PLUS_OP
   82        | MINUS_OP

   83 termo: fator
   84      | termo mult_op fator

   85 mult_op: MULT_OP
   86        | DIV_OP

   87 fator: OPEN_PAREN expressao CLOSE_PAREN
   88      | var
   89      | ativacao
   90      | REAL_NUMBER
   91      | INT_NUMBER
   92      | OPEN_PAREN expressao error
   93      | OPEN_PAREN error CLOSE_PAREN

   94 ativacao: IDENTIFIER OPEN_PAREN args CLOSE_PAREN
   95         | IDENTIFIER OPEN_PAREN args error

   96 args: ε
   97     | arg_lista

   98 arg_lista: expressao
   99          | arg_lista COMMA expressao


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 9 10 13 14 20 21 25 26 33 36 48 51 52 53 55 56 57 60 65 66 69 70 92 93 95
    INT_TYPE (258) 15
    FLOAT_TYPE (259) 16
    CHAR_TYPE (260) 17
    STRUCT_TYPE (261) 19 20 21
    VOID_TYPE (262) 18 28
    IF_KEYWORD (263) 49 50 51 52 53
    ELSE_KEYWORD (264) 50
    WHILE_KEYWORD (265) 54 55 56 57
    RETURN_KEYWORD (266) 58 59 60
    PLUS_OP (267) 81
    MINUS_OP (268) 82
    MULT_OP (269) 85
    DIV_OP (270) 86
    MOD_OP (271)
    ASSIGN_OP (272) 61
    EQUAL_OP (273) 77
    NE_OP (274) 78
    LT_OP (275) 74
    LE_OP (276) 73
    GT_OP (277) 75
    GE_OP (278) 76
    OPEN_BRACE (279) 19 20 21 34
    CLOSE_BRACE (280) 19 21 35
    OPEN_PAREN (281) 24 25 26 49 50 51 52 54 55 56 87 92 93 94 95
    CLOSE_PAREN (282) 24 26 49 50 52 54 56 87 93 94
    OPEN_BRACKET (283) 7 9 10 12 13 14 32 33 64 65 66 68 69 70
    CLOSE_BRACKET (284) 7 10 12 14 32 64 66 68 70
    SEMICOLON (285) 6 7 8 9 10 46 47 58 59
    COMMA (286) 30 99
    DOT (287)
    IDENTIFIER (288) 6 7 8 9 10 19 20 21 24 25 26 31 32 33 63 64 65 66 94 95
    INT_NUMBER (289) 7 9 12 13 91
    REAL_NUMBER (290) 90
    INVALID_IDENTIFIER (291)
    LEXICAL_ERROR (292)
    LOWER (293)
    ERROR_RECOVERY (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    programa (41)
        on left: 1
        on right: 0
    declaracao_lista (42)
        on left: 2 3
        on right: 1 3
    declaracao (43)
        on left: 4 5
        on right: 2 3
    var_declaracao (44)
        on left: 6 7 8 9 10
        on right: 4 22 23 38
    arranjo_dimensao (45)
        on left: 11 12 13 14
        on right: 7 12 13 14
    tipo_especificador (46)
        on left: 15 16 17 18 19 20 21
        on right: 6 7 8 9 10 24 25 26 31 32 33
    atributos_declaracao (47)
        on left: 22 23
        on right: 19 20 23
    fun_declaracao (48)
        on left: 24 25 26
        on right: 5
    params (49)
        on left: 27 28
        on right: 24 25
    param_lista (50)
        on left: 29 30
        on right: 27 30
    param (51)
        on left: 31 32 33
        on right: 29 30
    composto_decl (52)
        on left: 34
        on right: 24 25 26 42
    temp (53)
        on left: 35 36
        on right: 34
    local_declaracoes (54)
        on left: 37 38
        on right: 34 38
    comando_lista (55)
        on left: 39 40
        on right: 34 40
    comando (56)
        on left: 41 42 43 44 45
        on right: 40 49 50 51 52 54 55 56
    expressao_decl (57)
        on left: 46 47 48
        on right: 41
    selecao_decl (58)
        on left: 49 50 51 52 53
        on right: 43
    iteracao_decl (59)
        on left: 54 55 56 57
        on right: 44
    retorno_decl (60)
        on left: 58 59 60
        on right: 45
    expressao (61)
        on left: 61 62
        on right: 46 48 49 50 51 54 55 59 60 61 64 65 68 69 87 92 98 99
    var (62)
        on left: 63 64 65 66
        on right: 61 88
    arranjo_acesso (63)
        on left: 67 68 69 70
        on right: 64 65 66 68 69 70
    expressao_simples (64)
        on left: 71 72
        on right: 62
    relacional (65)
        on left: 73 74 75 76 77 78
        on right: 72
    expressao_soma (66)
        on left: 79 80
        on right: 71 72 80
    soma_op (67)
        on left: 81 82
        on right: 80
    termo (68)
        on left: 83 84
        on right: 79 80 84
    mult_op (69)
        on left: 85 86
        on right: 84
    fator (70)
        on left: 87 88 89 90 91 92 93
        on right: 83 84
    ativacao (71)
        on left: 94 95
        on right: 89
    args (72)
        on left: 96 97
        on right: 94 95
    arg_lista (73)
        on left: 98 99
        on right: 97 99


State 0

    0 $accept: • programa $end

    INT_TYPE     shift, and go to state 1
    FLOAT_TYPE   shift, and go to state 2
    CHAR_TYPE    shift, and go to state 3
    STRUCT_TYPE  shift, and go to state 4
    VOID_TYPE    shift, and go to state 5

    programa            go to state 6
    declaracao_lista    go to state 7
    declaracao          go to state 8
    var_declaracao      go to state 9
    tipo_especificador  go to state 10
    fun_declaracao      go to state 11


State 1

   15 tipo_especificador: INT_TYPE •

    $default  reduce using rule 15 (tipo_especificador)


State 2

   16 tipo_especificador: FLOAT_TYPE •

    $default  reduce using rule 16 (tipo_especificador)


State 3

   17 tipo_especificador: CHAR_TYPE •

    $default  reduce using rule 17 (tipo_especificador)


State 4

   19 tipo_especificador: STRUCT_TYPE • IDENTIFIER OPEN_BRACE atributos_declaracao CLOSE_BRACE
   20                   | STRUCT_TYPE • IDENTIFIER OPEN_BRACE atributos_declaracao error
   21                   | STRUCT_TYPE • IDENTIFIER OPEN_BRACE error CLOSE_BRACE

    IDENTIFIER  shift, and go to state 12


State 5

   18 tipo_especificador: VOID_TYPE •

    $default  reduce using rule 18 (tipo_especificador)


State 6

    0 $accept: programa • $end

    $end  shift, and go to state 13


State 7

    1 programa: declaracao_lista •
    3 declaracao_lista: declaracao_lista • declaracao

    INT_TYPE     shift, and go to state 1
    FLOAT_TYPE   shift, and go to state 2
    CHAR_TYPE    shift, and go to state 3
    STRUCT_TYPE  shift, and go to state 4
    VOID_TYPE    shift, and go to state 5

    $default  reduce using rule 1 (programa)

    declaracao          go to state 14
    var_declaracao      go to state 9
    tipo_especificador  go to state 10
    fun_declaracao      go to state 11


State 8

    2 declaracao_lista: declaracao •

    $default  reduce using rule 2 (declaracao_lista)


State 9

    4 declaracao: var_declaracao •

    $default  reduce using rule 4 (declaracao)


State 10

    6 var_declaracao: tipo_especificador • IDENTIFIER SEMICOLON
    7               | tipo_especificador • IDENTIFIER OPEN_BRACKET INT_NUMBER CLOSE_BRACKET arranjo_dimensao SEMICOLON
    8               | tipo_especificador • IDENTIFIER error SEMICOLON
    9               | tipo_especificador • IDENTIFIER OPEN_BRACKET INT_NUMBER error SEMICOLON
   10               | tipo_especificador • IDENTIFIER OPEN_BRACKET error CLOSE_BRACKET SEMICOLON
   24 fun_declaracao: tipo_especificador • IDENTIFIER OPEN_PAREN params CLOSE_PAREN composto_decl
   25               | tipo_especificador • IDENTIFIER OPEN_PAREN params error composto_decl
   26               | tipo_especificador • IDENTIFIER OPEN_PAREN error CLOSE_PAREN composto_decl

    IDENTIFIER  shift, and go to state 15


State 11

    5 declaracao: fun_declaracao •

    $default  reduce using rule 5 (declaracao)


State 12

   19 tipo_especificador: STRUCT_TYPE IDENTIFIER • OPEN_BRACE atributos_declaracao CLOSE_BRACE
   20                   | STRUCT_TYPE IDENTIFIER • OPEN_BRACE atributos_declaracao error
   21                   | STRUCT_TYPE IDENTIFIER • OPEN_BRACE error CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 16


State 13

    0 $accept: programa $end •

    $default  accept


State 14

    3 declaracao_lista: declaracao_lista declaracao •

    $default  reduce using rule 3 (declaracao_lista)


State 15

    6 var_declaracao: tipo_especificador IDENTIFIER • SEMICOLON
    7               | tipo_especificador IDENTIFIER • OPEN_BRACKET INT_NUMBER CLOSE_BRACKET arranjo_dimensao SEMICOLON
    8               | tipo_especificador IDENTIFIER • error SEMICOLON
    9               | tipo_especificador IDENTIFIER • OPEN_BRACKET INT_NUMBER error SEMICOLON
   10               | tipo_especificador IDENTIFIER • OPEN_BRACKET error CLOSE_BRACKET SEMICOLON
   24 fun_declaracao: tipo_especificador IDENTIFIER • OPEN_PAREN params CLOSE_PAREN composto_decl
   25               | tipo_especificador IDENTIFIER • OPEN_PAREN params error composto_decl
   26               | tipo_especificador IDENTIFIER • OPEN_PAREN error CLOSE_PAREN composto_decl

    error         shift, and go to state 17
    OPEN_PAREN    shift, and go to state 18
    OPEN_BRACKET  shift, and go to state 19
    SEMICOLON     shift, and go to state 20


State 16

   19 tipo_especificador: STRUCT_TYPE IDENTIFIER OPEN_BRACE • atributos_declaracao CLOSE_BRACE
   20                   | STRUCT_TYPE IDENTIFIER OPEN_BRACE • atributos_declaracao error
   21                   | STRUCT_TYPE IDENTIFIER OPEN_BRACE • error CLOSE_BRACE

    error        shift, and go to state 21
    INT_TYPE     shift, and go to state 1
    FLOAT_TYPE   shift, and go to state 2
    CHAR_TYPE    shift, and go to state 3
    STRUCT_TYPE  shift, and go to state 4
    VOID_TYPE    shift, and go to state 5

    var_declaracao        go to state 22
    tipo_especificador    go to state 23
    atributos_declaracao  go to state 24


State 17

    8 var_declaracao: tipo_especificador IDENTIFIER error • SEMICOLON

    SEMICOLON  shift, and go to state 25


State 18

   24 fun_declaracao: tipo_especificador IDENTIFIER OPEN_PAREN • params CLOSE_PAREN composto_decl
   25               | tipo_especificador IDENTIFIER OPEN_PAREN • params error composto_decl
   26               | tipo_especificador IDENTIFIER OPEN_PAREN • error CLOSE_PAREN composto_decl

    error        shift, and go to state 26
    INT_TYPE     shift, and go to state 1
    FLOAT_TYPE   shift, and go to state 2
    CHAR_TYPE    shift, and go to state 3
    STRUCT_TYPE  shift, and go to state 4
    VOID_TYPE    shift, and go to state 27

    tipo_especificador  go to state 28
    params              go to state 29
    param_lista         go to state 30
    param               go to state 31


State 19

    7 var_declaracao: tipo_especificador IDENTIFIER OPEN_BRACKET • INT_NUMBER CLOSE_BRACKET arranjo_dimensao SEMICOLON
    9               | tipo_especificador IDENTIFIER OPEN_BRACKET • INT_NUMBER error SEMICOLON
   10               | tipo_especificador IDENTIFIER OPEN_BRACKET • error CLOSE_BRACKET SEMICOLON

    error       shift, and go to state 32
    INT_NUMBER  shift, and go to state 33


State 20

    6 var_declaracao: tipo_especificador IDENTIFIER SEMICOLON •

    $default  reduce using rule 6 (var_declaracao)


State 21

   21 tipo_especificador: STRUCT_TYPE IDENTIFIER OPEN_BRACE error • CLOSE_BRACE

    CLOSE_BRACE  shift, and go to state 34


State 22

   22 atributos_declaracao: var_declaracao •

    $default  reduce using rule 22 (atributos_declaracao)


State 23

    6 var_declaracao: tipo_especificador • IDENTIFIER SEMICOLON
    7               | tipo_especificador • IDENTIFIER OPEN_BRACKET INT_NUMBER CLOSE_BRACKET arranjo_dimensao SEMICOLON
    8               | tipo_especificador • IDENTIFIER error SEMICOLON
    9               | tipo_especificador • IDENTIFIER OPEN_BRACKET INT_NUMBER error SEMICOLON
   10               | tipo_especificador • IDENTIFIER OPEN_BRACKET error CLOSE_BRACKET SEMICOLON

    IDENTIFIER  shift, and go to state 35


State 24

   19 tipo_especificador: STRUCT_TYPE IDENTIFIER OPEN_BRACE atributos_declaracao • CLOSE_BRACE
   20                   | STRUCT_TYPE IDENTIFIER OPEN_BRACE atributos_declaracao • error
   23 atributos_declaracao: atributos_declaracao • var_declaracao

    error        shift, and go to state 36
    INT_TYPE     shift, and go to state 1
    FLOAT_TYPE   shift, and go to state 2
    CHAR_TYPE    shift, and go to state 3
    STRUCT_TYPE  shift, and go to state 4
    VOID_TYPE    shift, and go to state 5
    CLOSE_BRACE  shift, and go to state 37

    var_declaracao      go to state 38
    tipo_especificador  go to state 23


State 25

    8 var_declaracao: tipo_especificador IDENTIFIER error SEMICOLON •

    $default  reduce using rule 8 (var_declaracao)


State 26

   26 fun_declaracao: tipo_especificador IDENTIFIER OPEN_PAREN error • CLOSE_PAREN composto_decl

    CLOSE_PAREN  shift, and go to state 39


State 27

   18 tipo_especificador: VOID_TYPE •
   28 params: VOID_TYPE •

    IDENTIFIER  reduce using rule 18 (tipo_especificador)
    $default    reduce using rule 28 (params)


State 28

   31 param: tipo_especificador • IDENTIFIER
   32      | tipo_especificador • IDENTIFIER OPEN_BRACKET CLOSE_BRACKET
   33      | tipo_especificador • IDENTIFIER OPEN_BRACKET error

    IDENTIFIER  shift, and go to state 40


State 29

   24 fun_declaracao: tipo_especificador IDENTIFIER OPEN_PAREN params • CLOSE_PAREN composto_decl
   25               | tipo_especificador IDENTIFIER OPEN_PAREN params • error composto_decl

    error        shift, and go to state 41
    CLOSE_PAREN  shift, and go to state 42


State 30

   27 params: param_lista •
   30 param_lista: param_lista • COMMA param

    COMMA  shift, and go to state 43

    $default  reduce using rule 27 (params)


State 31

   29 param_lista: param •

    $default  reduce using rule 29 (param_lista)


State 32

   10 var_declaracao: tipo_especificador IDENTIFIER OPEN_BRACKET error • CLOSE_BRACKET SEMICOLON

    CLOSE_BRACKET  shift, and go to state 44


State 33

    7 var_declaracao: tipo_especificador IDENTIFIER OPEN_BRACKET INT_NUMBER • CLOSE_BRACKET arranjo_dimensao SEMICOLON
    9               | tipo_especificador IDENTIFIER OPEN_BRACKET INT_NUMBER • error SEMICOLON

    error          shift, and go to state 45
    CLOSE_BRACKET  shift, and go to state 46


State 34

   21 tipo_especificador: STRUCT_TYPE IDENTIFIER OPEN_BRACE error CLOSE_BRACE •

    $default  reduce using rule 21 (tipo_especificador)


State 35

    6 var_declaracao: tipo_especificador IDENTIFIER • SEMICOLON
    7               | tipo_especificador IDENTIFIER • OPEN_BRACKET INT_NUMBER CLOSE_BRACKET arranjo_dimensao SEMICOLON
    8               | tipo_especificador IDENTIFIER • error SEMICOLON
    9               | tipo_especificador IDENTIFIER • OPEN_BRACKET INT_NUMBER error SEMICOLON
   10               | tipo_especificador IDENTIFIER • OPEN_BRACKET error CLOSE_BRACKET SEMICOLON

    error         shift, and go to state 17
    OPEN_BRACKET  shift, and go to state 19
    SEMICOLON     shift, and go to state 20


State 36

   20 tipo_especificador: STRUCT_TYPE IDENTIFIER OPEN_BRACE atributos_declaracao error •

    $default  reduce using rule 20 (tipo_especificador)


State 37

   19 tipo_especificador: STRUCT_TYPE IDENTIFIER OPEN_BRACE atributos_declaracao CLOSE_BRACE •

    $default  reduce using rule 19 (tipo_especificador)


State 38

   23 atributos_declaracao: atributos_declaracao var_declaracao •

    $default  reduce using rule 23 (atributos_declaracao)


State 39

   26 fun_declaracao: tipo_especificador IDENTIFIER OPEN_PAREN error CLOSE_PAREN • composto_decl

    OPEN_BRACE  shift, and go to state 47

    composto_decl  go to state 48


State 40

   31 param: tipo_especificador IDENTIFIER •
   32      | tipo_especificador IDENTIFIER • OPEN_BRACKET CLOSE_BRACKET
   33      | tipo_especificador IDENTIFIER • OPEN_BRACKET error

    OPEN_BRACKET  shift, and go to state 49

    $default  reduce using rule 31 (param)


State 41

   25 fun_declaracao: tipo_especificador IDENTIFIER OPEN_PAREN params error • composto_decl

    OPEN_BRACE  shift, and go to state 47

    composto_decl  go to state 50


State 42

   24 fun_declaracao: tipo_especificador IDENTIFIER OPEN_PAREN params CLOSE_PAREN • composto_decl

    OPEN_BRACE  shift, and go to state 47

    composto_decl  go to state 51


State 43

   30 param_lista: param_lista COMMA • param

    INT_TYPE     shift, and go to state 1
    FLOAT_TYPE   shift, and go to state 2
    CHAR_TYPE    shift, and go to state 3
    STRUCT_TYPE  shift, and go to state 4
    VOID_TYPE    shift, and go to state 5

    tipo_especificador  go to state 28
    param               go to state 52


State 44

   10 var_declaracao: tipo_especificador IDENTIFIER OPEN_BRACKET error CLOSE_BRACKET • SEMICOLON

    SEMICOLON  shift, and go to state 53


State 45

    9 var_declaracao: tipo_especificador IDENTIFIER OPEN_BRACKET INT_NUMBER error • SEMICOLON

    SEMICOLON  shift, and go to state 54


State 46

    7 var_declaracao: tipo_especificador IDENTIFIER OPEN_BRACKET INT_NUMBER CLOSE_BRACKET • arranjo_dimensao SEMICOLON

    $default  reduce using rule 11 (arranjo_dimensao)

    arranjo_dimensao  go to state 55


State 47

   34 composto_decl: OPEN_BRACE • local_declaracoes comando_lista temp

    $default  reduce using rule 37 (local_declaracoes)

    local_declaracoes  go to state 56


State 48

   26 fun_declaracao: tipo_especificador IDENTIFIER OPEN_PAREN error CLOSE_PAREN composto_decl •

    $default  reduce using rule 26 (fun_declaracao)


State 49

   32 param: tipo_especificador IDENTIFIER OPEN_BRACKET • CLOSE_BRACKET
   33      | tipo_especificador IDENTIFIER OPEN_BRACKET • error

    error          shift, and go to state 57
    CLOSE_BRACKET  shift, and go to state 58


State 50

   25 fun_declaracao: tipo_especificador IDENTIFIER OPEN_PAREN params error composto_decl •

    $default  reduce using rule 25 (fun_declaracao)


State 51

   24 fun_declaracao: tipo_especificador IDENTIFIER OPEN_PAREN params CLOSE_PAREN composto_decl •

    $default  reduce using rule 24 (fun_declaracao)


State 52

   30 param_lista: param_lista COMMA param •

    $default  reduce using rule 30 (param_lista)


State 53

   10 var_declaracao: tipo_especificador IDENTIFIER OPEN_BRACKET error CLOSE_BRACKET SEMICOLON •

    $default  reduce using rule 10 (var_declaracao)


State 54

    9 var_declaracao: tipo_especificador IDENTIFIER OPEN_BRACKET INT_NUMBER error SEMICOLON •
